Modified baseurl to new repo

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
 title: SPRITEs-NVDA Add-on Tutorial
 description: Step-by-step tutorial on how to use the SPRITEs Add-on with NVDA, including keyboard navigation and keyword search.
-baseurl: /sprites-nvda.github.io
+baseurl: /make4all.github.io/sprites
