--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: SPRITEs-NVDA Add-on Tutorial
-description: Step-by-step tutorial on how to use the SPRITEs Add-on with NVDA, including keyboard navigation and keyword search.
+title: SPRITEs-NVDA Add-on Tutorial SPRITEs for NVDA
+description: An NVDA add-on integrating Spatial Region Interaction Techniques (SPRITEs) for table navigation
